# shellcd-basic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
examples/: gitlab-ci.yml  shellcd-dispatcher.py
src/: cli.rs  config.rs  dorarion.rs  error.rs  lib.rs  logging.rs  main.rs  ssh.rs  validation.rs
tests/: README.md  cli_tests.rs
tests/artifact-extract-nginx-hup-test/: README.md  deploy.sh  index.sh
tests/artifact-extract-test/: README.md  deploy.sh  index.sh
tests/docker-compose-test/: README.md  compose.yml  deploy.sh  index.sh
tests/simple-test/: README.md  deploy.sh  index.sh
tests/support/: Dockerfile  common.sh  entrypoint.sh
