[package]
name = "shellcd-basic"
version = "0.0.1"
edition = "2024"
description = "A small, hardened SSH deployment command for GitLab CI"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "time"] }

[dev-dependencies]
tempfile = "3.27.0"
